# test-python-example-project

./: .gitignore  setup.cfg
.github/workflows/: python-publish.yml
