[metadata]
name = example-package-janickr
version = 0.0.8
author = Janick Reynders
description = A small example package
license = Mozilla Public License 2.0 (MPL 2.0)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src